--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -12,6 +12,11 @@
       <%= form.submit "Search", class: "bg-blue-500 text-white py-2 px-4 rounded focus:outline-none focus:shadow-outline" %>
     </div>
   <% end %>
+
+  <div class="flex items-center mt-12 ">
+    <a href="<%= searches_path %>" class="bg-blue-500 text-white px-4 py-2 rounded">Search Analytics</a>
+  </div>
+
 </div>
 <!--<div class="container mx-auto mt-8">-->
 <!--    <div id="search-logs"></div>-->
